force-app/main/default/objects/Activity/fields/Task_Time_mins__c.field-meta.xml
<CustomField>
    <fullName>Task_Time_mins__c</fullName>
    <formula>ROUND( 12*60 * (
   ( 5 * FLOOR( ( DATEVALUE( EndDate__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( EndDate__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 12 *  ( MOD( EndDate__c - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( StartDate__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( StartDate__c ) - DATE( 1900, 1, 8), 7 ) +
      MIN( 1, 24 / 12 *  ( MOD( StartDate__c - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Time(mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>